fixed scoll bars visible in chrome and edge

--- a/styles.css
+++ b/styles.css
@@ -163,6 +163,14 @@ main::-webkit-scrollbar {
     overflow: scroll;
     scroll-snap-type: none;
     scroll-behavior: smooth;
+
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+}
+
+.card::-webkit-scrollbar {
+    /* Hide scrollbar for Chrome, Safari and Opera */
+    display: none;
 }
 
 .card h1 {
